# nyc-taxi-ml-pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mlflow-ui  LICENSE  Makefile  docker-compose.yml  environment.yml  main.py  paths.py  readme.md  requirements.txt  testing.ipynb
dagster_orchestration/: pyproject.toml
etl/: bronze.py  (+2 more)
spark_full/dagster_orchestration/: README.md  pyproject.toml  setup.cfg  setup.py
spark_full/dagster_orchestration/.tmp_dagster_home_8wr_oybq/history/runs/: index.db
spark_full/dagster_orchestration/.tmp_dagster_home_8wr_oybq/schedules/: schedules.db
spark_full/dagster_orchestration/.tmp_dagster_home___2m99mr/history/: runs.db
spark_full/dagster_orchestration/.tmp_dagster_home___2m99mr/history/runs/: index.db
spark_full/dagster_orchestration/.tmp_dagster_home___2m99mr/schedules/: schedules.db
spark_full/dagster_orchestration/.tmp_dagster_home_kum2cjvb/history/: runs.db
spark_full/dagster_orchestration/.tmp_dagster_home_kum2cjvb/schedules/: schedules.db
spark_full/dagster_orchestration/.tmp_dagster_home_z9_56s91/history/: runs.db
spark_full/dagster_orchestration/.tmp_dagster_home_z9_56s91/schedules/: schedules.db
spark_full/dagster_orchestration/dagster_ingestion/: __init__.py  definitions.py  job.py  ops.py
spark_full/dagster_orchestration/dagster_ingestion/assets/: nyc_weather_assets.py  nyc_yellow_taxi_assets.py
spark_full/dagster_orchestration/dagster_ingestion/utilities/: download_utils.py  file_paths.py  spark_session.py
spark_full/dagster_orchestration/dagster_ingestion_tests/: test_download_utils.py
(+62 files in other folders)
