[project]
name = "dagster_ingestion"
version = "0.1.0"
description = "NYC Taxi Pipeline with Dagster and Delta Lake"
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_ingestion"
code_location_name = "nyc_taxi_pipeline"

[tool.setuptools.packages.find]
exclude = ["dagster_ingestion_tests"]
